# QT-Delta-Python-Project-1338cb3b-cce9-4807-ad85-aaacc5f374a5

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sonar-project.properties  vars.yml
.github/: pull_request_template.md
.github/workflows/: ci.yaml
docker/: Dockerfile  entrypoint.sh
scripts/: make_makefile_docs.py  yaml2include.sh
